<resources>
    <string name="app_name">TaskManager</string>
    <string name="task_name">Task name</string>
    <string name="task_date_start">Date start</string>
    <string name="task_date_finish">Date finish</string>
    <string name="task_description">Description</string>
    <string name="new_task_title">Create task</string>
    <string name="choose_date">Choose date</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add_task_hint">Add task</string>
    <string name="choose_time">Choose time</string>
    <string name="input_task_name">Input task name</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_end_time">Choose end time</string>
    <string name="input_description">Input description</string>
    <string name="save_task">Save task</string>
</resources>