<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.newtask.NewTaskFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/new_task_title"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/task_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/task_name_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="text"
            android:gravity="end"
            android:hint="@string/input_task_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_date"
            android:inputType="date"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/time_from"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/time_from_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="time"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_time_from"
            android:inputType="time"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/time_to"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/time_to_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="time"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="end"
            android:hint="@string/choose_time_from"
            android:inputType="time"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:text="@string/task_description"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:gravity="start"
            android:hint="@string/input_description"
            android:inputType="textMultiLine|text"
            android:maxLines="4"
            android:singleLine="false"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task" />


</LinearLayout>